--- a/Act-2.html
+++ b/Act-2.html
@@ -129,5 +129,13 @@ THE SHOWS AND FILMS USED HERE ARE OWNED BY SEVERAL COMPANIES AND ARE USED FOR ED
             </tr>
         </table>
     </div>
+
+<a href="index.html" target="_blank" title="To Index">
+        <img src="images/palico 2.png" alt="Palico" 
+             style="width: 200px; position: fixed; bottom: 10px; right: 10px;
+                    border: 5px solid black; border-radius: 10px;">
+    </a>
+
+
 </body>
 </html>
