Added links to the film wikipedia page

--- a/Act-2.html
+++ b/Act-2.html
@@ -71,16 +71,44 @@ THE SHOWS AND FILMS USED HERE ARE OWNED BY SEVERAL COMPANIES AND ARE USED FOR ED
             </tr>
 
             <tr>
-                <td><img src="images/totoro.jpg" alt="totoro" title="My Neighbour Totoro"></td>
-                <td><img src="images/ponyo.jpg" alt="ponyo" title="Ponyo"></td>
-                <td><img src="images/grave.jpg" alt="grave_of_the_fireflies" title="Grave of the Fireflies"></td>
-                <td><img src="images/kiki.jpg" alt="kiki" class="kiki-img" title="Kiki's Delivery Service"></td>
+                <td>
+                    <a href="https://en.wikipedia.org/wiki/My_Neighbor_Totoro" target="_blank">
+                    <img src="images/totoro.jpg" alt="totoro" title="My Neighbour Totoro">
+                    </a>
+                </td>
+                <td>
+                    <a href="https://en.wikipedia.org/wiki/Ponyo" target="_blank">
+                    <img src="images/ponyo.jpg" alt="ponyo" title="Ponyo">
+                    </a>
+                </td>
+                <td>
+                    <a href="https://en.wikipedia.org/wiki/Grave_of_the_Fireflies" target="_blank">
+                    <img src="images/grave.jpg" alt="grave_of_the_fireflies" title="Grave of the Fireflies">
+                    </a>
+                </td>
+                <td>
+                    <a href="https://en.wikipedia.org/wiki/Kiki%27s_Delivery_Service" target="_blank">
+                    <img src="images/kiki.jpg" alt="kiki" class="kiki-img" title="Kiki's Delivery Service">
+                    </a>
+                </td>
             </tr>
 
             <tr>
-                <td><img src="images/arrietty.jpg" alt="arrietty" title="Arrietty"></td>
-                <td><img src="images/violet.jpg" alt="violet" title="Violet Evergarden"></td>
-                <td rowspan="2" colspan="2"><img src="images/howl.jpg" alt="howl" title="Howl's Moving Castle" class="howl-img"></td>
+                <td>
+                    <a href="https://en.wikipedia.org/wiki/Arrietty" target="_blank">
+                    <img src="images/arrietty.jpg" alt="arrietty" title="Arrietty">
+                    </a>
+                </td>
+                <td>
+                    <a href="https://en.wikipedia.org/wiki/Violet_Evergarden" target="_blank">
+                    <img src="images/violet.jpg" alt="violet" title="Violet Evergarden">
+                    </a>
+                </td>
+                <td rowspan="2" colspan="2">
+                    <a href="https://en.wikipedia.org/wiki/Howl%27s_Moving_Castle_(film)" target="_blank">
+                    <img src="images/howl.jpg" alt="howl" title="Howl's Moving Castle" class="howl-img">
+                </a>
+                </td>
             </tr>
 
             <tr>
@@ -88,28 +116,84 @@ THE SHOWS AND FILMS USED HERE ARE OWNED BY SEVERAL COMPANIES AND ARE USED FOR ED
                     <!-- nested table, smaller images  -->
                     <table border="0" cellspacing="0" cellpadding="0">
                         <tr>
-                            <td><img src="images/boy_and_the_heron.jpg" alt="boy_and_the_herons" title="The Boy and the Heron" class="smaller-img"></td>
-                            <td><img src="images/p.kaguya.jpg" alt="p.kaguya" class="smaller-img" title="The Tale of Princess Kaguya"></td>
-                            <td rowspan="2" colspan="2"><img src="images/maquia.jpg" alt="maquia" title="Maquia" class="small-img"></td>
+                            <td>
+                                <a href="https://en.wikipedia.org/wiki/The_Boy_and_the_Heron" target="_blank">
+                                <img src="images/boy_and_the_heron.jpg" alt="boy_and_the_herons" title="The Boy and the Heron" class="smaller-img">
+                                </a>
+                            </td>
+                            <td>
+                                <a href="https://en.wikipedia.org/wiki/The_Tale_of_the_Princess_Kaguya_(film)" target="_blank">
+                                <img src="images/p.kaguya.jpg" alt="p.kaguya" class="smaller-img" title="The Tale of Princess Kaguya">
+                                </a>
+                            </td>
+                            <td rowspan="2" colspan="2">
+                                <a href="https://en.wikipedia.org/wiki/Maquia:_When_the_Promised_Flower_Blooms" target="_blank">
+                                <img src="images/maquia.jpg" alt="maquia" title="Maquia" class="small-img">
+                                </a>
+                            </td>
                         </tr>
                         <tr>
-                            <td><img src="images/mr.fox.jpg" alt="mr.fox" title="Fantastic Mr.Fox" class="smaller-img"></td>
-                            <td><img src="images/robinsons.jpg" alt="robinsons" title="Meet the Robinsons" class="smaller-img"></td>
+                            <td>
+                                <a href="https://en.wikipedia.org/wiki/Fantastic_Mr._Fox_(film)" target="_blank">
+                                <img src="images/mr.fox.jpg" alt="mr.fox" title="Fantastic Mr.Fox" class="smaller-img">
+                                </a>
+                            </td>
+                            <td>
+                                <a href="https://en.wikipedia.org/wiki/Meet_the_Robinsons" target="_blank">
+                                <img src="images/robinsons.jpg" alt="robinsons" title="Meet the Robinsons" class="smaller-img">
+                                </a>
+                            </td>
                         </tr>
                         <tr>
-                            <td><img src="images/tfath.jpg" alt="tfath" title="The Fox and the Hound" class="smaller-img"></td>
-                            <td><img src="images/mitchels.jpg" alt="mitchels" title="The Mitchel's vs the World" class="smaller-img"></td>
-                            <td><img src="images/castle.jpg" alt="castle" title="The Castle in the Sky" class="smaller-img"></td>
-                            <td><img src="images/wind.jpg" alt="wind" title="The Wind Rises" class="smaller-img"></td>
+                            <td>
+                                <a href="https://en.wikipedia.org/wiki/The_Fox_and_the_Hound" target="_blank">
+                                <img src="images/tfath.jpg" alt="tfath" title="The Fox and the Hound" class="smaller-img">
+                                </a>
+                            </td>
+                            <td>
+                                <a href="https://en.wikipedia.org/wiki/The_Mitchells_vs._the_Machines" target="_blank">
+                                <img src="images/mitchels.jpg" alt="mitchels" title="The Mitchel's vs the Machines" class="smaller-img">
+                                </a>
+                            </td>
+                            <td>
+                                <a href="https://en.wikipedia.org/wiki/Castle_in_the_Sky" target="_blank">
+                                <img src="images/castle.jpg" alt="castle" title="The Castle in the Sky" class="smaller-img">
+                                </a>
+                            </td>
+                            <td>
+                                <a href="https://en.wikipedia.org/wiki/The_Wind_Rises" target="_blank">
+                                <img src="images/wind.jpg" alt="wind" title="The Wind Rises" class="smaller-img">
+                                </a>
+                            </td>
                         </tr>
                         <tr>
-                            <td colspan="2" rowspan="2"><img src="images/shrek.jpg" alt="shrek" title="Shrek" class="small-img"></td>
-                            <td><img src="images/wall-e.jpg" alt="wall-e" title="Wall-E" class="smaller-img"></td>
-                            <td><img src="images/el_dorado.jpg" alt="el_dorado" title="The Road to El Dorado" class="smaller-img"></td>
+                            <td colspan="2" rowspan="2">
+                                <a href="https://en.wikipedia.org/wiki/Shrek" target="_blank">
+                                <img src="images/shrek.jpg" alt="shrek" title="Shrek" class="small-img">
+                                </a>
+                            </td>
+                            <td>
+                                <a href="https://en.wikipedia.org/wiki/WALL-E" target="_blank">
+                                <img src="images/wall-e.jpg" alt="wall-e" title="Wall-E" class="smaller-img">
+                                </a>
+                            </td>
+                            <td>
+                                <a href="https://en.wikipedia.org/wiki/The_Road_to_El_Dorado" target="_blank">
+                                <img src="images/el_dorado.jpg" alt="el_dorado" title="The Road to El Dorado" class="smaller-img">
+                                </a>
+                            </td>
                         </tr>
                         <tr>
-                            <td><img src="images/tbol.jpg" alt="tbol" title="The Book of Life" class="smaller-img"></td>
-                            <td><img src="images/new_groove.jpg" alt="new_groove" title="The Emperor's New Groove" class="smaller-img"></td>
+                            <td>
+                                <a href="https://en.wikipedia.org/wiki/The_Book_of_Life_(2014_film)" target="_blank">
+                                <img src="images/tbol.jpg" alt="tbol" title="The Book of Life" class="smaller-img">
+                                </a>
+                            </td>
+                            <td>
+                                <a href="https://en.wikipedia.org/wiki/The_Emperor%27s_New_Groove" target="_blank">
+                                <img src="images/new_groove.jpg" alt="new_groove" title="The Emperor's New Groove" class="smaller-img">
+                                </a>
+                            </td>
                         </tr>
                     </table>
                 </td>
@@ -117,12 +201,28 @@ THE SHOWS AND FILMS USED HERE ARE OWNED BY SEVERAL COMPANIES AND ARE USED FOR ED
                 <td>
                    <table border="1" cellspacing="0" cellpadding="5" width="100%">
                         <tr>
-                            <td><img src="images/a_silent_voice.jpg" alt="a_silent_voice" title="A Silent Voice" class="medium-img"></td>
-                            <td><img src="images/josee.jpg" alt="josee" title="Josee, the Tiger, and the Fish" class="medium-img"></td>
+                            <td>
+                                <a href="https://en.wikipedia.org/wiki/A_Silent_Voice_(film)" target="_blank">
+                                <img src="images/a_silent_voice.jpg" alt="a_silent_voice" title="A Silent Voice" class="medium-img">
+                                </a>
+                            </td>
+                            <td>
+                                <a href="https://en.wikipedia.org/wiki/Josee,_the_Tiger_and_the_Fish_(2020_film)" target="_blank">
+                                <img src="images/josee.jpg" alt="josee" title="Josee, the Tiger, and the Fish" class="medium-img">
+                                </a>
+                            </td>
                         </tr>
                         <tr>
-                            <td><img src="images/iwteyp.jpg" alt="iwteyp" title="I want to eat your pancreas" class="medium-img"></td>
-                            <td><img src="images/your_name.jpg" alt="your_name" title="Your Name" class="medium-img"></td>
+                            <td>
+                                <a href="https://en.wikipedia.org/wiki/I_Want_to_Eat_Your_Pancreas_(film)" target="_blank">
+                                <img src="images/iwteyp.jpg" alt="iwteyp" title="I want to eat your pancreas" class="medium-img">
+                                    </a>
+                            </td>
+                            <td>
+                                <a href="https://en.wikipedia.org/wiki/Your_Name" target="_blank">
+                                <img src="images/your_name.jpg" alt="your_name" title="Your Name" class="medium-img">
+                                </a>
+                            </td>
                         </tr>
                     </table>
                 </td>
